[JENKINS-55941] Removing JAXB dependency from TFS-plugin